@@ -1,11 +1,15 @@
 Revision history for Perl extension ExtUtils::Depends.
 
-0.--- Mon Apr  4 22:49:35 EDT 2005
-	- Correct a typo in the synopsis.
+0.--- Sun Mar 30 17:29:35 CEST 2008
+	- On MSWin32 and cygwin, find the link libraries of dependencies and
+          put them into LIBS.
+	- Add tests.
+	- Correct typos in the documentation.
 	- In get_makefile_vars, comment out the code that put the installed
 	  libraries into @OBJECT, which caused them to get deleted on
 	  realclean.
 	- In Makefile.PL, don't use the bogus package "MAIN".
+	- Remove debug spew.
 
 0.205 Sun Jan 23 13:20:14 EST 2005
 	- Disable the RPM-related postamble on Win32.  The 'date' command
